Add transmissibility definition

--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -238,6 +238,18 @@
   urlg         = {http://www.ieee.org/organizations/history\_center/legacies/gallager.html},
   }
 
+@book{goldman1999,
+  isbn10       = {0831130881},
+  isbn         = {9780831130886},
+  title        = {Vibration Spectrum Analysis: A Practical Approach},
+  author       = {Steve Goldman},
+  publisher    = {Industrial Press Inc.},
+  year         = {1999},
+  pages        = {331},
+  url          = {http://books.google.com/books?vid=ISBN0831130881},
+  urla         = {http://www.amazon.com/dp/0831130881},
+  }
+
 @techreport{goyder1984,
   number       = {ADP003677},
   title        = {Foolproof Methods for Frequency Response Measurements},
