--- a/common/randprocess.tex
+++ b/common/randprocess.tex
@@ -612,6 +612,10 @@ Let $\rvx(t)$ be a \prope{wide sense stationary} random process.
 \end{array}}
 \end{definition}
 
+%---------------------------------------
+\begin{remark}[\fnctd{spectral power}]
+\label{rem:spower}
+%---------------------------------------
 Why does $\Swxx(\omega)$ deserve the name \fncte{power spectral density}?
 This is answered by \pref{thm:psd_ergodic} (next).
 But to elaborate further, note that $\Swxx$ is the spectral representation of 
@@ -620,6 +624,7 @@ For example, if there is no relationship, then $\Swxx(\omega)=1$.
 But in the case that $\rvx(t)$ is \prope{ergodic in the mean}, then $\Swxx$ takes on 
 an additional meaning---it describes the ``spectral power" present in $\rvx(t)$.
 This is demonstrated by the next theorem.
+\end{remark}
 
 %---------------------------------------
 \begin{theorem}
