Discussion of communications additive noise model and measurement additive noise model

--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1632,6 +1632,7 @@
 \newcommand{\rvp}[0]{\mbfp}
 \newcommand{\rvq}[0]{\mbfq}
 \newcommand{\rvu}[0]{\mbfu}
+\newcommand{\rvm}[0]{\mbfm}
 \newcommand{\rvw}[0]{\mbfw}
 \newcommand{\rvv}[0]{\mbfv}
 \newcommand{\rvx}[0]{\mbfx}
