Dual H1 result for communications and measurement noise models

--- a/common/randseq_addnoise.tex
+++ b/common/randseq_addnoise.tex
@@ -82,6 +82,30 @@ Let $\opS$ be the \structe{system} illustrated to the right:
 \end{proof}
 
 %---------------------------------------
+\begin{remark}
+%---------------------------------------
+The $\Ryy=\Rxx+\Rvv$ result of \pref{thm:xvy} is simple and beautiful.
+However, don't get to giddy and free with it.
+Rather, pay attention to the constraints on the left.
+In particular, note that if $\rvw\eqd-\rvv$ such that $\rvx=\rvy+\rvw$,
+then it is \textbf{not true} that $\Rxx=\Ryy+\Rww$.
+The problem here is that $\rvy$ and $\rvw$ are very much 
+\prope{correlated}---in fact $\rvy$ is a \emph{function} of $\rvw$ in that $\rvy=\rvx+\rvw$.
+As such, the correct expression for $\Rxx$ here would be
+\begin{align*}
+  \Rxx(m)
+    &\eqd \pE\brs{\rvx(m)\rvx^\ast(0)}
+  \\&\eqd \pE\brp{\brs{\rvy(m)+\rvw(m)}\brs{\rvy(0)+\rvw(0)}^\ast}
+  \\&= \pE\brs{\rvy(m)\rvy^\ast(0)}
+     + \pE\brs{\rvy(m)\rvw^\ast(0)}
+     + \pE\brs{\rvw(m)\rvy^\ast(0)}
+     + \pE\brs{\rvw(m)\rvw^\ast(0)}
+  \\&\eqd \Ryy(m) + \Ryw(m) + \Rwy(m) + \Rww(m)
+  \\&= \boxed{\Ryy(m) + \Rww(m) + 2\Real\Ryw(m)}
+\end{align*}
+\end{remark}
+
+%---------------------------------------
 \begin{corollary}
 \label{cor:xvy}
 %---------------------------------------
