Added estimate noise references

--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -274,6 +274,38 @@
   urla         = {http://www.amazon.com/dp/0023535717},
   }
 
+@article{kim2003,
+  journal      = {The Journal of Scanning Microscopes},
+  volume       = {26},
+  number       = {6},
+  pages        = {135--139},
+  year         = {2004},
+  publisher    = {FAMS, Inc.},
+  month        = {September 24},
+  year         = {2003},
+  title        = {Image Signal-to-Noise Ratio and Noise Variance Estimation Using Autoregressive Model},
+  author       = {K.S. Kim and Nidal S. Kamel},
+  institution  = {Multimedia University, Faculty of Engineering and Technology},
+  address      = {Melaka, Malaysia},
+  url          = {https://doi.org/10.1002/sca.4950260605},
+  urlw         = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/sca.4950260306}
+  }
+
+@article{kamel2004,
+  journal      = {The Journal of Scanning Microscopes},
+  volume       = {26},
+  pages        = {277--281},
+  year         = {2004},
+  publisher    = {FAMS, Inc.},
+  month        = {September 15},
+  year         = {2004},
+  title        = {Image Signal-to-Noise Ratio and Noise Variance Estimation Using Autoregressive Model},
+  author       = {Nidal S. Kamel and K. S. Sim},
+  institution  = {Multimedia University, Faculty of Engineering and Technology},
+  address      = {Melaka, Malaysia},
+  url          = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/sca.4950260605},
+  }
+
 @article{leclere2012,
   title        = {On the use of the Hs estimator for the experimental assessment of transmissibility matrices},
   author       = {Q. Leclere and Bert Roozen and Celine Sandier},
@@ -603,6 +635,19 @@
   isbn         = {https://archive.org/details/FubdamentalsOfSignalShinHammond/},
   }
 
+@article{shoo1988,
+  journal      = {Computer Vision, Graphics, and Image Processing},
+  volume       = {41},
+  number       = {2},
+  year         = {1988},
+  month        = {February},
+  pages        = {233--260},
+  title        = {A survey of thresholding techniques},
+  author       = {P.K Sahoo and S. Soltani and A. K. C. Wong},
+  doi          = {https://doi.org/10.1016/0734-189X(88)90022-9},
+  url          = {https://pequan.lip6.fr/~bereziat/pima/2014/sahoo88.pdf},
+  }
+
 @book{svozil,
   author       = {Karl Svozil},
   title        = {Randomness \& Undecidability in Physics},
@@ -630,6 +675,18 @@
   urlg         = {http://books.google.com/books?vid=ISBN9027718997},
   urlw         = {http://www.worldcat.org/isbn/9027718997},
   urla         = {http://www.amazon.com/dp/9027718997},
+  }
+
+@article{thong2006,
+  journal      = {The Journal of Scanning Microscopes},
+  volume       = {23},
+  pages        = {328--336},
+  title        = {Single-image signal-to-noise ratio estimation},
+  author       = {J. C. H. Phang and K. S. Sim and J. C. H. Phang},
+  year         = {2001},
+  month        = {December 07},
+  url          = {https://doi.org/10.1002/sca.4950230506},
+  urlw         = {https://onlinelibrary.wiley.com/doi/abs/10.1002/sca.4950230506},
   }
 
 @book{trivedi2016,
