--- a/common/randseq_addnoise.tex
+++ b/common/randseq_addnoise.tex
@@ -310,8 +310,8 @@ Let $\opS$ be the \structe{system} illustrated to the right.
   \implies
   \brb{\begin{array}{rcl}
       \Rxy(m)&=& \Rxq(m)
-           \\&=& \Rpy(m)
-           \\&=& \Rpq(m)
+           \\&=& \Rpy(m) - \Ruy(m)
+           \\&=& \Rpq(m) - \Ruq(m)
   \end{array}}
   }
 \\
@@ -342,13 +342,8 @@ Let $\opS$ be the \structe{system} illustrated to the right.
   \\&\eqd \pE\brp{\brs{\rvp(m)-\rvu(m)}\rvy^\ast(0)}
     && \text{by definition of $\opS$}
   \\&= \pE\brs{\rvp(m)\rvy^\ast(0)-\rvu(m)\rvy^\ast(0)}
-  \\&= \pE\brs{\rvp(m)\rvy^\ast(0)} - \brs{\pE\rvu(m)}\brs{\pE\rvy^\ast(0)}
-    && \text{by \prope{uncorrelated} hypothesis}
-    && \text{(C)}
-  \\&= \pE\brs{\rvp(m)\rvy^\ast(0)} - \cancelto{0}{\brs{\pE\rvu(m)}}\brs{\pE\rvy^\ast(0)}
-    && \text{by \prope{zero-mean} hypothesis}
-    && \text{(E)}
-  \\&= \Rpy(m)
+  \\&= \pE\brs{\rvp(m)\rvy^\ast(0)}-\pE\brs{\rvu(m)\rvy^\ast(0)}
+  \\&= \Rpy(m) - \Ruy(m)
     && \text{by definition of $\Rxy$}
     && \text{\xref{def:Rxym}}
   \\
@@ -367,18 +362,18 @@ Let $\opS$ be the \structe{system} illustrated to the right.
   \\&= \pE\brs{\rvp(m)}\pE\brs{\rvq^\ast(0)}
      + \pE\brs{\rvp(m)}\pE\brs{\rvv^\ast(0)}
      \\&\qquad
-     - \pE\brs{\rvu(m)}\pE\brs{\rvq^\ast(0)}
+     - \pE\brs{\rvu(m)\rvq^\ast(0)}
      - \pE\brs{\rvu(m)}\pE\brs{\rvv^\ast(0)}
     && \text{by \prope{uncorrelated} hypothesis}
     && \text{(B), (C), and (D)}
   \\&= \pE\brs{\rvp(m)\rvq^\ast(0)}
      + \pE\brs{\rvp(m)}\cancelto{0}{\pE\brs{\rvv^\ast(0)}}
      \\&\qquad
-     - \cancelto{0}{\pE\brs{\rvu(m)}}\pE\brs{\rvq^\ast(0)}
+     - \pE\brs{\rvu(m)\rvq^\ast(0)}
      - \cancelto{0}{\pE\brs{\rvu(m)}}\pE\brs{\rvv^\ast(0)}
     && \text{by \prope{zero-mean} hypothesis}
     && \text{(E)}
-  \\&= \Rpq(m)
+  \\&= \Rpq(m) - \Ruq(m)
     && \text{by definition of $\Rpq$}
     && \text{\xref{def:Rxym}}
 \end{align*}
