--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1730,6 +1730,8 @@
 \newcommand{\Ryv} {\Rxx[yv]}
 \newcommand{\Ryx} {\Rxx[yx]}
 \newcommand{\Ruu} {\Rxx[uu]}
+\newcommand{\Ruy} {\Rxx[uy]}
+\newcommand{\Ruq} {\Rxx[uq]}
 \newcommand{\Rpy} {\Rxx[py]}
 \newcommand{\Rsx} {\Rxx[sx]}
 \newcommand{\Rsy} {\Rxx[sy]}
