Corrected some additive noise math mistakes

--- a/common/randseq_dsp.tex
+++ b/common/randseq_dsp.tex
@@ -265,9 +265,9 @@ Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
   \end{array}}
   \implies
   \brb{\begin{array}{F>{\ds}rc>{\ds}lD}
-       (1).&\ZSxy(z) &=& \ZSxx(z) \Zh^\ast\brp{\frac{1}{z^\ast}}      & and
-     \\(2).&\ZSyy(z) &=& \ZSyx(z) \Zh^\ast\brp{\frac{1}{z^\ast}}      & and
-     \\(3).&\ZSyy(z) &=& \ZSxx(z) \Zh\brp{z} \Zh^\ast\brp{\frac{1}{z^\ast}}
+       (1).&\ZSxy(z) &=& \ZSxx(z) \ZH^\ast\brp{\frac{1}{z^\ast}}      & and
+     \\(2).&\ZSyy(z) &=& \ZSyx(z) \ZH^\ast\brp{\frac{1}{z^\ast}}      & and
+     \\(3).&\ZSyy(z) &=& \ZSxx(z) \ZH\brp{z} \ZH^\ast\brp{\frac{1}{z^\ast}}
   \end{array}}
   }
 \end{theorem}
@@ -282,7 +282,7 @@ Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
    \\&= \brs{\opZ\Rxx(m)}\,\opZ\brs{\fh^\ast(-m)}
     && \text{by \thme{convolution theorem}}
     && \text{\xref{thm:conv}}
-   \\&= \ZSxx(z) \Zh^\ast\brp{\frac{1}{z^\ast}}
+   \\&= \ZSxx(z) \ZH^\ast\brp{\frac{1}{z^\ast}}
     && \text{by \prefp{thm:opZ}}
    \\
    \\
@@ -295,22 +295,22 @@ Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
    \\&= \brs{\opZ\Ryx(m)}\,\opZ\brs{\fh^\ast(-m)}
     && \text{by \thme{convolution theorem}}
     && \text{\xref{thm:conv}}
-   \\&= \ZSyx(z) \Zh^\ast\brp{\frac{1}{z^\ast}}
+   \\&= \ZSyx(z) \ZH^\ast\brp{\frac{1}{z^\ast}}
     && \text{by \prefp{thm:opZ}}
    \\
    \\
   \ZSyy(z)
-     &= \ZSyx(z) \Zh^\ast\brp{\frac{1}{z^\ast}}
+     &= \ZSyx(z) \ZH^\ast\brp{\frac{1}{z^\ast}}
      && \text{by previous result}
      && \text{(2)}
-   \\&= \ZSxy^\ast\brp{\frac{1}{z^\ast}} \Zh^\ast\brp{\frac{1}{z^\ast}}
+   \\&= \ZSxy^\ast\brp{\frac{1}{z^\ast}} \ZH^\ast\brp{\frac{1}{z^\ast}}
      && \text{by \prefp{thm:ZSxy_sym}}
-   \\&= \brs{ \ZSxx(z') \Zh^\ast\brp{\frac{1}{z'^\ast}} }^\ast_{z'=\frac{1}{z^\ast}} 
-        \Zh^\ast\brp{\frac{1}{z^\ast}}
+   \\&= \brs{ \ZSxx(z') \ZH^\ast\brp{\frac{1}{z'^\ast}} }^\ast_{z'=\frac{1}{z^\ast}} 
+        \ZH^\ast\brp{\frac{1}{z^\ast}}
      && \text{by previous result}
      && \text{(1)}
-   \\&= \ZSxx^\ast\brp{\frac{1}{z^\ast}} \Zh\brp{z} \Zh^\ast\brp{\frac{1}{z^\ast}}
-   \\&= \ZSxx(z) \Zh\brp{z} \Zh^\ast\brp{\frac{1}{z^\ast}}
+   \\&= \ZSxx^\ast\brp{\frac{1}{z^\ast}} \ZH\brp{z} \ZH^\ast\brp{\frac{1}{z^\ast}}
+   \\&= \ZSxx(z) \ZH\brp{z} \ZH^\ast\brp{\frac{1}{z^\ast}}
      && \text{by \pref{thm:ZSxy_sym}}
 \end{align*}
 \end{proof}
@@ -340,10 +340,10 @@ Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
      &= \brlr{\ZSxy(z)}_{z=e^{i\omega}}
      && \text{by definition of \ope{DTFT}}
      && \text{\xref{def:dtft}}
-   \\&= \brlr{\ZSxx(z)\Zh^\ast\brp{\frac{1}{z^\ast}}}_{z=e^{i\omega}}
+   \\&= \brlr{\ZSxx(z)\ZH^\ast\brp{\frac{1}{z^\ast}}}_{z=e^{i\omega}}
      && \text{by \prefp{thm:ZSxy}}
-   \\&= \ZSxx\brp{e^{i\omega}}\Zh^\ast\brp{\frac{1}{e^{i\omega\ast}}}
-   \\&= \ZSxx\brp{e^{i\omega}}\Zh^\ast\brp{e^{i\omega}}
+   \\&= \ZSxx\brp{e^{i\omega}}\ZH^\ast\brp{\frac{1}{e^{i\omega\ast}}}
+   \\&= \ZSxx\brp{e^{i\omega}}\ZH^\ast\brp{e^{i\omega}}
    \\&= \Swxx(\omega) \Fh^\ast(\omega)
      && \text{by definition of \ope{DTFT}}
      && \text{\xref{def:dtft}}
@@ -354,10 +354,10 @@ Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
    \\&= \brp{\brlr{\ZSyy(z)}_{z=e^{i\omega}}}^\ast
      && \text{by definition of \ope{DTFT}}
      && \text{\xref{def:dtft}}
-   \\&= \brp{\brlr{\ZSyx(z)\Zh^\ast\brp{\frac{1}{z^\ast}}}_{z=e^{i\omega}}}^\ast
+   \\&= \brp{\brlr{\ZSyx(z)\ZH^\ast\brp{\frac{1}{z^\ast}}}_{z=e^{i\omega}}}^\ast
      && \text{by \prefp{thm:ZSxy}}
-   \\&= \brp{\ZSyx\brp{e^{i\omega}} \Zh^\ast\brp{\frac{1}{e^{i\omega\ast}}}}^\ast
-   \\&= \brp{\ZSyx\brp{e^{i\omega}} \Zh^\ast\brp{e^{i\omega}}}^\ast
+   \\&= \brp{\ZSyx\brp{e^{i\omega}} \ZH^\ast\brp{\frac{1}{e^{i\omega\ast}}}}^\ast
+   \\&= \brp{\ZSyx\brp{e^{i\omega}} \ZH^\ast\brp{e^{i\omega}}}^\ast
    \\&= \brp{\Swyx(\omega) \Fh^\ast(\omega)}^\ast
      && \text{by definition of \ope{DTFT}}
      && \text{\xref{def:dtft}}
@@ -367,10 +367,10 @@ Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
      &= \brlr{\ZSyy(z)}_{z=e^{i\omega}}
      && \text{by definition of \ope{DTFT}}
      && \text{\xref{def:dtft}}
-   \\&= \brlr{\ZSxx(z)\Zh\brp{z} \Zh^\ast\brp{\frac{1}{z^\ast}}}_{z=e^{i\omega}}
+   \\&= \brlr{\ZSxx(z)\ZH\brp{z} \ZH^\ast\brp{\frac{1}{z^\ast}}}_{z=e^{i\omega}}
      && \text{by \prefp{thm:ZSxy}}
-   \\&= \ZSxx\brp{e^{i\omega}} \Zh\brp{e^{i\omega}} \Zh^\ast\brp{\frac{1}{e^{i\omega\ast}}}
-   \\&= \ZSxx\brp{e^{i\omega}} \Zh\brp{e^{i\omega}} \Zh^\ast\brp{e^{i\omega}}
+   \\&= \ZSxx\brp{e^{i\omega}} \ZH\brp{e^{i\omega}} \ZH^\ast\brp{\frac{1}{e^{i\omega\ast}}}
+   \\&= \ZSxx\brp{e^{i\omega}} \ZH\brp{e^{i\omega}} \ZH^\ast\brp{e^{i\omega}}
    \\&= \Swxx(\omega) \Fh(\omega) \Fh^\ast(\omega)
      && \text{by definition of \ope{DTFT}}
      && \text{\xref{def:dtft}}
@@ -502,8 +502,8 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{thm:xGw_xHy}.
 \index{minimum phase}
 \index{rational expression}
 %---------------------------------------
-Let $\Zh(z)$ be the z-transform of the impulse response of a filter.
-If $\Zh(z)$ can be expressed as a rational expression with poles and zeros
+Let $\ZH(z)$ be the z-transform of the impulse response of a filter.
+If $\ZH(z)$ can be expressed as a rational expression with poles and zeros
 $r_ne^{i\theta_n}$,
 then the filter is \textbf{minimum phase} if each $r_n<1$
 (all roots lie inside the unit circle in the complex $z$-plane).
@@ -521,7 +521,7 @@ $\fL^\ast(1/z^\ast)$ has a root at
 That is, if $\fL(z)$ has a root inside the unit circle,
 then $\fL^\ast(1/z^\ast)$ has a root directly opposite across the unit circle
 boundary (see \prefp{fig:z-roots}).
-A causal stable filter $\Zh(z)$ must have all of its poles inside
+A causal stable filter $\ZH(z)$ must have all of its poles inside
 the unit circle.
 A minimum phase filter is a filter with both its poles and zeros inside the
 unit circle.
