--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1667,6 +1667,7 @@
 \newcommand{\Sw}   [1]{\tilde{\mathfnct{S}}_{\mathsfup{#1}}}  % spectral density
 \newcommand{\Swxx}   [1][xx] {\tilde{\mathfnct{S}}_{\mathsfup{#1}}}  % spectral density
 \newcommand{\Swuu}   {\Sw{uu}}
+\newcommand{\Swuq}   {\Sw{uq}}
 \newcommand{\Swvv}   {\Sw{vv}}
 \newcommand{\Swyy}   {\Sw{yy}}
 \newcommand{\Swxy}   {\Sw{xy}}
@@ -1784,6 +1785,7 @@
 \newcommand{\Sz}[1]{\hat{\mathfnct{S}}_{\mathsfup{#1}}}  % z-domain spectral density
 \newcommand{\Szxx}   {\Sz{xx}}
 \newcommand{\Szuu}   {\Sz{uu}}
+\newcommand{\Szuq}   {\Sz{uq}}
 \newcommand{\Szvv}   {\Sz{vv}}
 \newcommand{\Szyy}   {\Sz{yy}}
 \newcommand{\Szxy}   {\Sz{xy}}
