--- a/common/randseq_addnoise.tex
+++ b/common/randseq_addnoise.tex
@@ -18,15 +18,21 @@ Let $\opS$ be the \structe{system} illustrated to the right:
 \end{minipage}
 \qquad\tbox{\includegraphics{graphics/sys_xvy.pdf}}
 \thmbox{
-  \brbr{\begin{array}{@{\hspace{2pt}}FrclDD}
-      (A).& \Rxx(n_1,m)             &=& \Rxx(n_2,m)         &(\prope{WSS})          & and
-    \\(B).& \pE\brs{\rvx(n)\rvv(n)} &=&\pE\rvx(n)\pE\rvv(n) &(\prope{uncorrelated}) & and
-    \\(C).& \pE\rvv(n)              &=& 0                   & (\prope{zero-mean})
+  %\brbr{\begin{array}{@{\hspace{2pt}}FrclDD}
+  %    (A).& \Rxx(n_1,m)             &=& \Rxx(n_2,m)         &(\prope{WSS})          & and
+  %  \\(B).& \pE\brs{\rvx(n)\rvv(n)} &=&\pE\rvx(n)\pE\rvv(n) &(\prope{uncorrelated}) & and
+  %  \\(C).& \pE\rvv(n)              &=& 0                   & (\prope{zero-mean})
+  %\end{array}}
+  \brbr{\begin{array}{@{\hspace{2pt}}FMMD}
+      (A).& $\rvx(n)$ is                & \prope{WSS}          & and 
+    \\(B).& $\rvx(n)$ and $\rvv(n)$ are & \prope{uncorrelated} & and
+    \\(C).& $\rvv(n)$ is                & \prope{zero-mean}
   \end{array}}
   \implies
-  \brbl{\begin{array}{Frcl}
-      (1).&\Ryv(m)       &=&                 \Rvv(m) \quad\text{\scs and}
-    \\(2).&\Ryy(m)       &=& \Rxx(m)       + \Rvv(m)
+  \brbl{\begin{array}{FrclD}
+      (1).&\Ryv(m) &=&           \Rvv(m) & and
+    \\(2).&\Ryy(m) &=&           \Rxx(m) + \Rvv(m) & and
+    \\(3).&\Rxx(m) &=& \mc{2}{l}{\Ryy(m) + \Rvv(m) - 2\Real\Ryv(m)}
   \end{array}}
   }
 \\
@@ -78,31 +84,46 @@ Let $\opS$ be the \structe{system} illustrated to the right:
   \\&= \Rxx(m) + \Rvv(m)
     && \text{by definition of $\Rxx$}
     && \text{\xref{def:Rxxm}}
+  \\
+  \Rxx(m)
+    &\eqd \pE\brs{\rvx(m)\rvx^\ast(0)}
+  \\&\eqd \pE\brp{\brs{\rvy(m)-\rvv(m)}\brs{\rvy(0)-\rvv(0)}^\ast}
+  \\&= \pE\brs{\rvy(m)\rvy^\ast(0)}
+     - \pE\brs{\rvy(m)\rvv^\ast(0)}
+     - \pE\brs{\rvv(m)\rvy^\ast(0)}
+     + \pE\brs{\rvv(m)\rvv^\ast(0)}
+  \\&\eqd \Ryy(m) - \Ryv(m) - \Rvy(m) + \Rvv(m)
+  \\&= \Ryy(m) + \Rvv(m) - 2\Real\Ryv(m) 
 \end{align*}
 \end{proof}
 
 %---------------------------------------
 \begin{remark}
 %---------------------------------------
-The $\Ryy=\Rxx+\Rvv$ result of \pref{thm:xvy} is simple and beautiful.
-However, don't get to giddy and free with it.
-Rather, pay attention to the constraints on the left.
-In particular, note that if $\rvw\eqd-\rvv$ such that $\rvx=\rvy+\rvw$,
-then it is \textbf{not true} that $\Rxx=\Ryy+\Rww$.
-The problem here is that $\rvy$ and $\rvw$ are very much 
-\prope{correlated}---in fact $\rvy$ is a \emph{function} of $\rvw$ in that $\rvy=\rvx+\rvw$.
-As such, the correct expression for $\Rxx$ here would be
-\begin{align*}
-  \Rxx(m)
-    &\eqd \pE\brs{\rvx(m)\rvx^\ast(0)}
-  \\&\eqd \pE\brp{\brs{\rvy(m)+\rvw(m)}\brs{\rvy(0)+\rvw(0)}^\ast}
-  \\&= \pE\brs{\rvy(m)\rvy^\ast(0)}
-     + \pE\brs{\rvy(m)\rvw^\ast(0)}
-     + \pE\brs{\rvw(m)\rvy^\ast(0)}
-     + \pE\brs{\rvw(m)\rvw^\ast(0)}
-  \\&\eqd \Ryy(m) + \Ryw(m) + \Rwy(m) + \Rww(m)
-  \\&= \boxed{\Ryy(m) + \Rww(m) + 2\Real\Ryw(m)}
-\end{align*}
+Because in \pref{thm:xvy} $\rvy = \rvx + \rvv$ and $\Ryy = \Rxx + \Rvv$,
+one might assume that $R$ is a kind of \ope{linear operator} \ifxref{operator}{def:linop} 
+and further assume that
+because $\rvx=\rvy-\rvv$ and $\Rxx[(-v)(-v)]=\Rvv$, that $\Rxx = \Ryy + \Rvv$.
+As \pref{thm:xvy} demonstrates, this is simply \textbf{not the case}.
+%The $\Ryy=\Rxx+\Rvv$ result of \pref{thm:xvy} is simple and beautiful.
+%However, don't get to giddy and free with it.
+%Rather, pay attention to the constraints on the left.
+%In particular, note that if $\rvw\eqd-\rvv$ such that $\rvx=\rvy+\rvw$,
+%then it is \textbf{not true} that $\Rxx=\Ryy+\Rww$.
+The problem here is that $\rvy$ and $\rvv$ are very much 
+\prope{correlated}---in fact $\rvy$ is obviously a \emph{function} of $\rvv$. % in that $\rvy=\rvx+\rvw$.
+%As such, the correct expression for $\Rxx$ here would be
+%\begin{align*}
+%  \Rxx(m)
+%    &\eqd \pE\brs{\rvx(m)\rvx^\ast(0)}
+%  \\&\eqd \pE\brp{\brs{\rvy(m)+\rvw(m)}\brs{\rvy(0)+\rvw(0)}^\ast}
+%  \\&= \pE\brs{\rvy(m)\rvy^\ast(0)}
+%     + \pE\brs{\rvy(m)\rvw^\ast(0)}
+%     + \pE\brs{\rvw(m)\rvy^\ast(0)}
+%     + \pE\brs{\rvw(m)\rvw^\ast(0)}
+%  \\&\eqd \Ryy(m) + \Ryw(m) + \Rwy(m) + \Rww(m)
+%  \\&= \boxed{\Ryy(m) + \Rww(m) + 2\Real\Ryw(m)}
+%\end{align*}
 \end{remark}
 
 %---------------------------------------
@@ -119,8 +140,10 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{thm:xvy}.
   \brbl{\begin{array}{FrclD}
       (1).&\Szyy(z)      &=& \Szxx(z)      + \Szvv(z)      & and
     \\(2).&\Szyv(z)      &=&                 \Szvv(z)      & and
-    \\(3).&\Swyy(\omega) &=& \Swxx(\omega) + \Swvv(\omega) & and
-    \\(4).&\Swyv(\omega) &=&                 \Swvv(\omega) &
+    \\(3).&\Szyv(z)      &=& \Szyy(z)      + \Szvv(z) + \Szyv(z) + \Szyv^\ast(z^\ast)   & and
+    \\(4).&\Swyy(\omega) &=& \Swxx(\omega) + \Swvv(\omega) & and
+    \\(5).&\Swyv(\omega) &=&                 \Swvv(\omega) &
+    \\(6).&\Swyv(\omega) &=& \Swyy(\omega) + \Swvv(\omega) + \Swyv(\omega) + \Swyv^\ast(-\omega)   & 
   \end{array}}
   }
 \end{corollary}
@@ -359,7 +382,7 @@ Let $\opS$ be the \structe{system} illustrated to the right.
      - \pE\brs{\rvu(m)\rvq^\ast(0)}
      - \pE\brs{\rvu(m)\rvv^\ast(0)}
      }
-  \\&= \pE\brs{\rvp(m)}\pE\brs{\rvq^\ast(0)}
+  \\&= \pE\brs{\rvp(m)\rvq^\ast(0)}
      + \pE\brs{\rvp(m)}\pE\brs{\rvv^\ast(0)}
      \\&\qquad
      - \pE\brs{\rvu(m)\rvq^\ast(0)}
@@ -387,14 +410,12 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{thm:sysH_addnoise}.
 \corbox{
   \brb{\begin{array}{M}
     hypotheses of\\
-    \prefpp{thm:sysH_addnoise}
+    \pref{thm:sysH_addnoise}
   \end{array}}
   \implies
   \brb{\begin{array}{F rcl cl cl D}
-      (1).&\Szxy(z)      &=& \Szxq(z)      &=& \Szpy(z)      &=& \Szpq(z)      & and
-    \\(2).&\Swxy(\omega) &=& \Swxq(\omega) &=& \Swpy(\omega) &=& \Swpq(\omega) & and
-    \\(3).&\Szyy(z)      &=& \Szqq(z)      &+& \Szvv(z)      & &               & and
-    \\(4).&\Swyy(\omega) &=& \Swqq(\omega) &+& \Swvv(\omega) & &               &
+      (1).&\Szxy(z)      &=& \Szxq(z)      &=& \Szpy(z)      - \Szuy(z)      &=& \Szpq(z)      - \Szuq(z)      & and
+    \\(2).&\Swxy(\omega) &=& \Swxq(\omega) &=& \Swpy(\omega) - \Swuy(\omega) &=& \Swpq(\omega) - \Swuq(\omega) &
   \end{array}}
   }
 \end{corollary}
@@ -426,7 +447,7 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{thm:sysH_addnoise}.
 
 %---------------------------------------
 \begin{corollary}
-\label{cor:sysH_addnoise}
+\label{cor:sysH_addnoise_lti}
 %---------------------------------------
 Let $\opS$ be the \structe{system} illustrated in \prefpp{thm:sysH_addnoise}.
 \corbox{
@@ -437,10 +458,10 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{thm:sysH_addnoise}.
   \end{array}}
   \implies
   \brb{\begin{array}{FrclD}
-      (1).&\Szyy(z)      &=& \brs{\Szxx(z)     +\Szuu(z)}\ZH(z)\ZH\brp{\frac{1}{z^\ast}} + \Szvv(z)   & and
-    \\(2).&\Swyy(\omega) &=& \brs{\Swxx(\omega)+\Swuu(\omega)}\abs{\FH(\omega)}^2 + \Swvv(\omega)     & and
-    \\(3).&\Szxy(z)      &=& \brs{\Szxx(z)     +\Szuu(z)}     \ZH^\ast\brp{\frac{1}{z^\ast}}          & and
-    \\(4).&\Swxy(\omega) &=& \brs{\Swxx(\omega)+\Swuu(\omega)}\FH^\ast(\omega)
+      (1).&\Szyy(z)      &=& \brs{\Szxx(z)     +\Szuu(z)}\ZH(z)\ZH\brp{\frac{1}{z^\ast}} + \Szvv(z) & and
+    \\(2).&\Swyy(\omega) &=& \brs{\Swxx(\omega)+\Swuu(\omega)}\abs{\FH(\omega)}^2 + \Swvv(\omega)   & and
+    \\(3).&\Szxy(z)      &=&      \Szxx(z)      \ZH^\ast\brp{\frac{1}{z^\ast}}                      & and
+    \\(4).&\Swxy(\omega) &=&      \Swxx(\omega) \FH^\ast(\omega)                                    &
   \end{array}}
   }
 \end{corollary}
@@ -449,9 +470,9 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{thm:sysH_addnoise}.
   \Szyy(z)
     &= \Szqq(z) + \Szvv(z)
     && \text{by \prefp{cor:xvy}}
-  \\&= \Szpp(z)\ZH(z)\ZH\brp{\frac{1}{z^\ast}} + \Szvv(z)
+  \\&= \Szpp(z)\ZH(z)\ZH^\ast\brp{\frac{1}{z^\ast}} + \Szvv(z)
     && \text{by \prefp{thm:ZSxy}}
-  \\&= \brs{\Szxx(z)+\Szuu(z)}\ZH(z)\ZH\brp{\frac{1}{z^\ast}} + \Szvv(z)
+  \\&= \brs{\Szxx(z)+\Szuu(z)}\ZH(z)\ZH^\ast\brp{\frac{1}{z^\ast}} + \Szvv(z)
     && \text{by \prefp{cor:xvy}}
   \\
   \Swyy(\omega)
@@ -463,20 +484,19 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{thm:sysH_addnoise}.
     && \text{by \prefp{cor:xvy}}
   \\
   \Szxy(z)
-    &= \Szpq(z)
+    &= \Szpq(z) - \Szuq(z)
     && \text{by \prefp{cor:sysH_addnoise}}
-  \\&= \Szpp(z)\ZH\brp{\frac{1}{z^\ast}}
+  \\&= \Szpp(z)\ZH^\ast\brp{\frac{1}{z^\ast}} - \Szuu(z)\ZH^\ast\brp{\frac{1}{z^\ast}}
     && \text{by \prefp{thm:ZSxy}}
-  \\&= \brs{\Szxx(z)+\Szuu(z)}\ZH\brp{\frac{1}{z^\ast}}
+  \\&= \brs{\Szxx(z)+\Szuu(z)}\ZH^\ast\brp{\frac{1}{z^\ast}}  - \Szuu(z)\ZH^\ast\brp{\frac{1}{z^\ast}}
     && \text{by \prefp{cor:xvy}}
+  \\&= \Szxx(z)\ZH^\ast\brp{\frac{1}{z^\ast}}
   \\
   \Swxy(\omega)
-    &= \Swpq(\omega)
-    && \text{by \prefp{cor:sysH_addnoise}}
-  \\&= \Swpp(\omega)\FH^\ast(\omega)
-    && \text{by \prefp{cor:Swxy}}
-  \\&= \brs{\Swxx(\omega)+\Swuu(\omega)}\ZH\brp{\frac{1}{z^\ast}}
-    && \text{by \prefp{cor:xvy}}
+    &= \brlr{\Szxy(z)}_{z=e^{-\omega}}
+  \\&= \brlr{\Szxx(z)\ZH^\ast\brp{\frac{1}{z^\ast}}}_{z=e^{-\omega}}
+    && \text{by previous result}
+  \\&= \Swxx(\omega)\FH^\ast(\omega)
 \end{align*}
 \end{proof}
 
